Added first modal for adding actions to an entity

--- a/Pages/BuildEncounter/BuildEncounterPartialClass.razor
+++ b/Pages/BuildEncounter/BuildEncounterPartialClass.razor
@@ -26,12 +26,18 @@
         {
             <EntityCard entity=character/>
         }
+        <button class="button">
+            <i class="bi bi-plus-circle"></i>
+        </button>
     </div>
     <div class="enemies">
         @foreach (var enemy in this._enemies)
         {
             <EntityCard entity=enemy/>
         }
+        <button class="button">
+            <i class="bi bi-plus-circle"></i>
+        </button>
     </div>
 </div>
 
