--- a/Pages/BuildEncounter/EntityCard.razor.css
+++ b/Pages/BuildEncounter/EntityCard.razor.css
@@ -1,7 +1,15 @@
 .entity {
     border: 1px solid black;
     text-align: center;
-    width: 50%;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.character-actions {
+    border: 1px solid black;
+    text-align: center;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
