--- a/Pages/BuildEncounter/BuildEncounterPartialClass.razor.css
+++ b/Pages/BuildEncounter/BuildEncounterPartialClass.razor.css
@@ -1,12 +1,35 @@
+.encounter {
+    display: flex;
+    flex-direction: row;
+}
+
+.side-column {
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+}
+
 .battle-properties {
     display: flex;
+    flex-direction: column;
+    border: 1px solid black;
     float: left;
-    width: 20%;
+    margin-right: 5px;
+    padding: 5px;
+}
+
+.main-column {
+    text-align: center;
+    flex-direction: column;
+    width: 85%;
 }
 
 .map {
-    float: center;
-    height: 400px;
+    display: flex;
+    flex: 100%;
+    text-align: center;
+    border: 2px solid black;
+    margin-top: 10px;
 }
 
 .entities {
@@ -17,13 +40,21 @@
 .characters {
     flex: 50%;
     border: 1px solid black;
-    margin-left: 15%;
     margin-right: 5px;
+    padding: 5px;
+    text-align: center;
 }
 
 .enemies {
     flex: 50%;
     border: 1px solid black;
     margin-left: 5px;
-    margin-right: 15%;
+    padding: 5px;
+    text-align: center;
+}
+
+.button {
+    font-size: 16px;
+    padding: 0px 0px;
+    border: 1px solid black;
 }
